# subwave

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
docs/bench_results/: linkers_release.json
subwave_appsink/: ACKNOWLEDGMENTS.md  Cargo.toml
subwave_appsink/src/: internal.rs  lib.rs  pixel_format.rs  render_pipeline.rs  shader.wgsl  video.rs  video_player.rs
subwave_core/: Cargo.toml
subwave_core/src/: error.rs  gstplayflags.rs  http.rs  lib.rs
subwave_core/src/video/: mod.rs  types.rs  video_trait.rs
subwave_unified/: Cargo.toml
subwave_unified/src/: video.rs
subwave_wayland/: Cargo.toml  README.md
subwave_wayland/.project/: CHANGELOG.md  MEMORY_LEAK_FIXES.md  NEXT_STEPS.md  WAYLAND_VIDEO_TODO.md  gstreamer_wayland_subsurface_research.md  gstreamer_wayland_subsurface_solution.md  integration_guide.md  pipeline_upgrade.md  wayland_subsurface_implementation_plan.md
subwave_wayland/examples/: simple_player.rs
subwave_wayland/src/: color_management.rs  gstplayflags.rs  internal.rs  lib.rs  pgs_decoder.rs  pipeline.rs  position.rs  subsurface_manager.rs  subtitle_runtime.rs  subtitle_scheduler.rs  text_renderer.rs  video.rs  video_player.rs  wayland_integration.rs  window.rs
