[workspace]
resolver = "3"
members = [
  "subwave_appsink",
  "subwave_core",
  "subwave_wayland",
  "subwave_unified",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lowband21/subwave"
documentation = "https://docs.rs/subwave"
homepage = "https://github.com/Lowband21/subwave"
readme = "README.md"
keywords = [
  "streaming",
  "rust",
  "video",
  "hdr",
  "iced",
  "gstreamer",
  "wayland",
  "shader",
]
categories = ["multimedia"]

[workspace.dependencies]
# Iced dependencies
iced = { git = "https://github.com/Lowband21/iced-ferrex.git", default-features = false, features = [
  "advanced",
  "wgpu",
  "image",
  "thread-pool",
  "wayland-hack",
  "wayland",
] }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrex.git" }
iced_winit = { git = "https://github.com/Lowband21/iced-ferrex.git" }

# GStreamer dependencies
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-pbutils = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-video-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }

log = "0.4"
thiserror = "^2"
url = "2"

# [patch."https://github.com/Lowband21/iced-ferrex.git"]
# iced = { path = "../ferrex-worktrees/main/vendor/iced-ferrex" }
# iced_core = { path = "../ferrex-worktrees/main/vendor/iced_ferrex/core" }
# iced_widget = { path = "../ferrex-worktrees/main/vendor/iced_ferrex/widget" }
# iced_wgpu = { path = "../ferrex-worktrees/main/vendor/iced_ferrex/wgpu" }
# iced_winit = { path = "../ferrex-worktrees/main/vendor/iced_ferrex/winit" }
