[package]
name = "subwave_appsink"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced.workspace = true
iced_wgpu.workspace = true

log.workspace = true
url.workspace = true

gstreamer.workspace = true
gstreamer-app.workspace = true

subwave_core = { path = "../subwave_core" }
