[package]
name = "subwave_unified"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# expose trait and types
subwave_core = { path = "../subwave_core" }
# concrete backends
subwave_appsink = { path = "../subwave_appsink" }
subwave_wayland = { path = "../subwave_wayland" }

gstreamer.workspace = true

# UI
iced.workspace = true
iced_wgpu.workspace = true

log.workspace = true
url.workspace = true
