[package]
name = "subwave_unified"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# expose trait and types
subwave_core = { path = "../subwave_core" }
# concrete backends
subwave_appsink = { path = "../subwave_appsink" }

gstreamer.workspace = true

# UI
iced.workspace = true
iced_wgpu.workspace = true

log.workspace = true
url.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
subwave_wayland = { path = "../subwave_wayland", optional = true, default-features = false }

[features]
default = ["wayland"]
wayland = ["dep:subwave_wayland"]
