[package]
name = "subwave_wayland"
version = "0.1.0"
edition = "2021"
description = "Wayland subsurface video player widget for Iced"
license = "MIT OR Apache-2.0"

[dependencies]
subwave_core = { path = "../subwave_core" }

# Iced dependencies
iced = { git = "https://github.com/Lowband21/iced-ferrix.git", branch = "feature/batched_primitives", default-features=false, features = [
    "advanced",
    "wgpu",
    "image",
    "thread-pool",
    "prefer_10bit",
    "wayland-hack"
] }
iced_wgpu = { git = "https://github.com/Lowband21/iced-ferrix.git", branch = "feature/batched_primitives" }
iced_winit = { git = "https://github.com/Lowband21/iced-ferrix.git", branch = "feature/batched_primitives" }

# Wayland client-side dependencies
wayland-client = "0.31"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable"] }
wayland-backend = "0.3"
wayland-egl = "0.32"
raw-window-handle = "0.6"

# GStreamer dependencies
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-pbutils = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-video-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "main" }
## glib is provided by gstreamer crates
#glib = "0.21.1"


#gstreamer-pbutils = "0.24"
#gstreamer-video = "0.24"
#gstreamer-video-sys = "0.24"
#gstreamer-app = "0.24"
#glib = "0.21"
# Text rendering
pango = "0.21"
pangocairo = "0.21"
cairo-rs = { version = "0.21", package = "cairo-rs" }

# Utilities
log = "0.4"
thiserror = "^1"
url = "2"
rustc-hash = "2.1"

# Synchronization
parking_lot = "0.12"
once_cell = "^1.19"
libc = "0.2.175"
tempfile = "3.21.0"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
debug = []

[[example]]
name = "simple_player"
