[package]
name = "subwave_wayland"
version = "0.1.0"
edition = "2021"
description = "Wayland subsurface video player widget for Iced"
license = "MIT OR Apache-2.0"

[dependencies]
subwave_core = { path = "../subwave_core" }

# Iced dependencies
iced.workspace = true
iced_wgpu.workspace = true
iced_winit.workspace = true

# Wayland client-side dependencies
wayland-client = "0.31"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable"] }
wayland-backend = "0.3"
raw-window-handle = "0.6"

# GStreamer dependencies
gstreamer.workspace = true
gstreamer-video.workspace = true
gstreamer-video-sys.workspace = true

# Text rendering (Leftover from subtitle attempt)
#pango = "0.21"
#pangocairo = "0.21"
#cairo-rs = { version = "0.21", package = "cairo-rs" }

# Utilities
log = "0.4"
thiserror.workspace = true
url = "2"
rustc-hash = "2.1"

# Synchronization
parking_lot = "0.12"
once_cell = "^1.19"
libc = "0.2.175"
tempfile = "3.21.0"

[features]
default = []
debug = []
